base/builds/regulus/argocd/projects/hometheatre/manifests/plex/httproute/HTTPRoute-plex-svc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/managed-by: ArgoCD
    app.kubernetes.io/name: plex-media-server
  name: plex-direct
  namespace: plex
spec:
  hostnames:
  - plex.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: plex-plex-media-server
      port: 32400
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
